syntax = "proto3";

package rpc;

import "auth/model/image.proto";

option go_package = "github.com/manhrev/labeler/pkg/api/go/auth/rpc;rpc";

message GetImageToLabelRequest {}

message GetImageToLabelResponse {
  model.Image image = 1;
}
