syntax = "proto3";

package rpc;

import "auth/model/image.proto";
import "validate/validate.proto";

option go_package = "github.com/manhrev/labeler/pkg/api/go/auth/rpc;rpc";

message GetLabeledImagesRequest {
    string labeler_id = 1;
    int64 page = 2;
    int64 size = 3 [(validate.rules).int64.gt = 0];
    model.Category category = 4 [(validate.rules).enum.defined_only = true];
}

message GetLabeledImagesResponse {
  repeated model.Image images = 1;
}
